[tool.poetry]
name = "daeclipse"
version = "0.1.0"
description = "A Python library for DeviantArt Eclipse functionality"
readme = "README.md"
authors = ["Kathryn DiPippo <dipippo.k@gmail.com>"]
license = "MIT"
homepage = "https://kathryndipippo.com/daeclipse/"
repository = "https://github.com/Pepper-Wood/daeclipse"
keywords = ["python", "deviantart"]

[tool.poetry.urls]
Issues = "https://github.com/Pepper-Wood/daeclipse/issues"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
beautifulsoup4 = "^4.7.1"
browser-cookie3 = "^0.12.1"
draftjs-exporter = "^4.1.2"
html-to-draftjs = "^1.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pdoc = "^7.4.0"
mkdocs = "^1.2.2"
mkdocs-material = "^7.2.2"
responses = "^0.13.4"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
