[tool.poetry]
name = "daeclipse"
version = "0.1.0"
description = "A Python wrapper for the DeviantArt Eclipse API endpoints."
authors = ["Kathryn DiPippo <dipippo.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
browser-cookie3 = "^0.12.0"
requests = "^2.25.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
